Refactor maze_results.csv and nasa_tlx_results.csv formatting

--- a/experimental-analysis/Experimental_Analysis.ipynb
+++ b/experimental-analysis/Experimental_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9bb68448-ee9b-4c48-bed4-0fc86879301c",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc4e3123d60c4a1c8a454e24b6d22b28",
+       "model_id": "f19eae09213b4a059b71f4cea7d45939",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +47,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe6bf75fd1b942acacc4a1bd7702fed3",
+       "model_id": "2dafb2e79e054de09b68e16279dc868e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,9 +66,10 @@
     "import statsmodels.api as sm\n",
     "from ipywidgets import VBox, Checkbox, Button, Output, Dropdown\n",
     "from IPython.display import display\n",
+    "import numpy as np\n",
     "\n",
     "# Load your data\n",
-    "file_path = 'updated.csv'  # Replace with your CSV file path\n",
+    "file_path = 'updated_scores_inverted_performance.csv'  # Replace with your CSV file path\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Convert 'Maze Score' from percentage to numeric if it exists\n",
@@ -193,12 +194,15 @@
     "        # Plot heatmap of correlations\n",
     "        plt.figure(figsize=(12, 10))\n",
     "        corr = data[[independent_var] + dependent_vars].corr()  # Include independent variable for correlation\n",
+    "        # Create a mask to display only the lower triangle of the heatmap\n",
+    "        mask = np.triu(np.ones_like(corr, dtype=bool))\n",
     "        \n",
     "        # Create a heatmap with a better aesthetic\n",
     "        heatmap = sns.heatmap(\n",
     "            corr,\n",
+    "            mask=mask,  # Apply the mask to the heatmap\n",
     "            annot=True,\n",
-    "            cmap='YlGnBu',  # Use a visually appealing color palette\n",
+    "            cmap='coolwarm',  # Use a visually appealing color palette\n",
     "            fmt='.2f',  # Format for correlation coefficients\n",
     "            linewidths=.5,\n",
     "            cbar_kws={\"shrink\": .8},  # Shrink color bar\n",
@@ -236,6 +240,14 @@
     "# Display the independent variable dropdown, dependent variable dropdown, checkboxes, and the button\n",
     "display(VBox([independent_dropdown] + checkboxes + [dependent_dropdown, run_button]), output)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d385986",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
